--- a/Blog42/Views/User/Delete.cshtml
+++ b/Blog42/Views/User/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Blog42.Models.UserDelete
 @{
-    // Titulo, caso formulário "deletar senha", caso sucesso ao resetar "Usuário deletado"
-    ViewBag.Title = (@ViewBag.Success == null) ? "Deletar Usuário" : "Usuário Deletado";
+    // Titulo, caso formulário "Deletar Senha", caso sucesso "Usuário Deletado"
+    ViewBag.Title = (ViewBag.Success == null) ? "Deletar Usuário" : "Usuário Deletado";
 }
 
 <div class="jumbotron">
@@ -11,53 +11,56 @@
     @Html.Partial("_PanelTabs")
 
     <div class="tab-content">
-        <!-- Início Conteúdo da página -->
+    <!-- Início Conteúdo da Tab-->
+
         <div class="box-title">
             <h2 class="title">@ViewBag.Title</h2>
         </div>
-        <div class="content ">
+        <div class="content">
 
-        @using (Html.BeginForm())
+        @if (ViewBag.Success != null) // Se obteve sucesso, exibe mensagem
+        {
+            <div class="div-success">
+                <h2 class="msg-success">
+                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Usuário excluído com sucesso!
+                </h2><br />
+                @Html.ActionLink("Voltar para listagem de Usuários", "All", "User")
+            </div>
+        }
+        else // Senão, monta formulário
+        {
+            <h4>Você está preste a deletar o usuário <b>@Html.ValueFor(m => m.Username) (@Html.ValueFor(m => m.Name))</b>. <br />&nbsp;</h4>
+            <h4> O que deseja fazer com suas publicações? </h4>
+
+            using (Html.BeginForm()) // Cria formulário
             {
-            @Html.AntiForgeryToken()
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true)
+            
+                @Html.HiddenFor(m => m.UserId)
+                @Html.HiddenFor(m => m.Name)
+                @Html.HiddenFor(m => m.Username)
+                
+                <div class="row p">
+                    @Html.RadioButtonFor(m => m.DeletePosts, "false", new { @checked = "checked" }) Tornar-me autor das suas publicações.
+                </div>
+                <div class="row p">
+                    @Html.RadioButtonFor(m => m.DeletePosts, "true") Excluir todas as publicações.
+                </div>
+                <br />
 
-                if (@ViewBag.Success != null) // Se obtive sucesso, exibe mensagem
-                {
-                    <div class="div-success">
-                        <h2 class="msg-success">
-                            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Usuário excluído com sucesso!
-                        </h2>
-                        <br />
-                        @Html.ActionLink("Voltar para listagem de Usuários", "All", "User")
+                <div class="row buttons" id="box-default">
+                    <div class="col-md-6">
+                        <button type="submit" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-ok"></span> Excluir usuário</button>
                     </div>
-                }
-                else // Exibe formulário
-                {
-                    <h4>Você está preste a deletar o usuário <b>@Html.ValueFor(m => m.Username) (@Html.ValueFor(m => m.Name))</b>. <br />&nbsp;</h4>
-                    <h4> O que deseja fazer com suas publicações? </h4>
-
-                    @Html.HiddenFor(m => m.Id)
-                    @Html.HiddenFor(m => m.Name)
-                    @Html.HiddenFor(m => m.Username)
-                    <div class="row p">
-                        @Html.RadioButtonFor(m => m.Delete, "false", new { @checked="checked" }) Tornar-me autor das suas publicações.
+                    <div class="col-md-6">
+                        <button type="button" onclick="location.href='@Url.Action("All","User")'" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-remove"></span> Decidir depois</button>
                     </div>
-                    <div class="row p">
-                        @Html.RadioButtonFor(m => m.Delete, "true") Excluir todas as publicações.
-                    </div>
-                    <br />
-
-                    <div class="row buttons" id="box-default">
-                        <div class="col-md-6">
-                            <button type="submit" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-ok"></span> Excluir usuário</button>
-                        </div>
-                        <div class="col-md-6">
-                            <button type="button" onclick="location.href='@Url.Action("All","User")'" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-remove"></span> Decidir depois</button>
-                        </div>
-                    </div>
-                }
+                </div>
             }
+        }
+        </div><!--/.content-->
 
-            <!-- Fim Conteúdo da página -->
-        </div>
+    <!-- Fim Conteúdo da Tab -->
+    </div>
 </div><!-- /.jumbotron -->
