--- a/Blog42/Views/User/ResetPassword.cshtml
+++ b/Blog42/Views/User/ResetPassword.cshtml
@@ -1,64 +1,62 @@
 ﻿@model Blog42.Models.UserResetPassword
-
 @{
-    // Titulo, caso formulário "cadastrar senha", caso sucesso ao resetar "senha cadastrada"
-    ViewBag.Title = (@ViewBag.Success == null) ? "Cadastrar Senha" : "Senha Cadastrada";
+    // Titulo, caso formulário "Cadastrar Senha", caso sucesso "Senha Cadastrada"
+    ViewBag.Title = (ViewBag.Success == null) ? "Cadastrar Senha" : "Senha Cadastrada";
 }
 
 <div class="jumbotron">
 
     <div class="box-title">
         <h2 class="title">
-            Olá, @User.Identity.Name! 
-            
-            @if (@ViewBag.Success == null) { // Exibe mensagem no formulário, não no sucesso 
+            Olá, @User.Identity.Name!
+
+            @if (ViewBag.Success == null) { // Exibe mensagem no título apenas na exibição do formulário
                 <text>Vamos cadastrar sua nova senha?</text>
             }
         </h2>
     </div>
     <div class="content">
 
-        @using (Html.BeginForm())
+        @if (ViewBag.Success != null) // Se obteve sucesso, exibe mensagem
         {
-            @Html.AntiForgeryToken()
-
-        <div id="box-reset">
-           
-            @if (@ViewBag.Success != null) // Se obtive sucesso, exibe mensagem
+            <div class="div-success">
+                <h2 class="msg-success">
+                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Senha cadastrada com sucesso!
+                </h2>
+                <br />
+                @Html.ActionLink("Ir para o Painel Administrativo", "All", "Post")
+            </div>
+        }
+        else // Senao, monta formulário
+        {
+            <div id="box-reset">
+            @using (Html.BeginForm()) // Cria formulário
             {
-                <div class="div-success">
-                    <h2 class="msg-success">
-                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Senha cadastrada com sucesso!
-                    </h2>
-                    <br />
-                    @Html.ActionLink("Ir para o Painel Administrativo", "All", "Post")
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true)
+
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Password)
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control input-lg" })
+                    @Html.ValidationMessageFor(m => m.Password)
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.ConfirmPassword)
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control input-lg" })
+                    @Html.ValidationMessageFor(m => m.ConfirmPassword)
+                </div>
+
+                <div class="row buttons">
+                    <div class="col-md-6">
+                        <button type="submit" class="btn btn-primary btn-lg">Cadastrar Senha</button>
+                    </div>
+                    <div class="col-md-6">
+                        <button type="button" class="btn btn-default btn-lg" onclick="location.href='@Url.Action("Logout","User")'">Sair e Cadastrar Depois</button>
+                    </div>
                 </div>
             }
-            else // Exibe formulário
-            {
-            @Html.ValidationSummary(true)
-            <div class="form-group">
-                @Html.LabelFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control input-lg" })
-                @Html.ValidationMessageFor(m => m.Password)
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control input-lg" })
-                @Html.ValidationMessageFor(m => m.ConfirmPassword)
-            </div>
-
-            <div class="row buttons">
-                <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary btn-lg">Cadastrar Senha</button>
-                </div>
-                <div class="col-md-6">
-                    <button type="button" class="btn btn-default btn-lg" onclick="location.href='@Url.Action("Logout","User")'">Sair e Cadastrar Depois</button>
-                </div>
-            </div>
-            }
-        </div>
-    }
+            </div><!--/#box-reset-->
+        }
 
     </div><!-- /.content -->
 </div><!-- /.jumbotron -->
