--- a/Blog42/Views/Post/Show.cshtml
+++ b/Blog42/Views/Post/Show.cshtml
@@ -1,31 +1,93 @@
 ﻿@{
-    ViewBag.Title = "Titulo da Postagem";
+    ViewBag.Title = ViewBag.Post.Title;
 }
 
 <div class="jumbotron">
     <div class="box-title">
-        <h2 class="title"><a href="#">TÍtulo abcdef</a></h2>
+        <h2 class="title">@ViewBag.Post.Title</h2>
         <span class="subtitle">
             <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-            Thiago Barradas
+            @ViewBag.Post.User.Name
         </span>
         <span class="subtitle">
             <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-            10/02/2015
+            @ViewBag.Post.CreatedAt.ToString("dd/MM/yyyy")
         </span>
         <span class="subtitle">
             <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-            23:05h
+            @ViewBag.Post.CreatedAt.ToString("HH:mm")
         </span>
         <span class="subtitle">
             <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
-            5 comentários
+            @ViewBag.Post.Comment.Count.ToString() @Blog42.Helpers.PluralHelper.SimplePluralize("comentário", ViewBag.Post.Comment.Count)
         </span>
     </div>
-    <div class="content">
-        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.<p>
-        <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
-        <p>Casamentiss faiz malandris se pirulitá, Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer Ispecialista im mé intende tudis nuam golada, vinho, uiski, carirí, rum da jamaikis, só num pode ser mijis. Adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-        <p>Cevadis im ampola pa arma uma pindureta. Nam varius eleifend orci, sed viverra nisl condimentum ut. Donec eget justis enim. Atirei o pau no gatis. Viva Forevis aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Copo furadis é disculpa de babadis, arcu quam euismod magna, bibendum egestas augue arcu ut est. Delegadis gente finis. In sit amet mattis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis. Pellentesque viverra accumsan ipsum elementum gravidis.</p>
+    <div class="content"><!-- content post-->
+        @ViewBag.Post.Content
+    </div><!-- /.content -->
+
+    <div class="content"><!-- content comments-->
+        <a name="comments"></a>
+        <h2 class="title">Comentários (@ViewBag.Post.Comment.Count.ToString())</h2>
+
+        @if (ViewBag.Post.Comment.Count == 0) // Se não tiver comentário, exibe mensagem que não tem comentários
+        { 
+            <div class="separator-only-vertical">
+                <span>Ér, nenhuma comentário. Acho que ninguém passou por aqui, né?</span>
+            </div>
+        }
+        else // Se tiver, exibe-os
+        {
+            foreach (var comment in ViewBag.Post.Comment)
+            {
+                <a name="comment-@comment.Id"></a>
+                <div class="box-comment panel separator-only-vertical">
+                    <div>
+                        @if (comment.Email == null || comment.Email == "") // Se usuário tiver email cria nome com link para email
+                            { <span><b>@comment.Author</b> disse:</span> }
+                        else
+                            { <span><a class="b" target="_blank" href="@String.Concat("mailto:",comment.Email)">@comment.Author</a> disse:</span> }
+                    </div>
+                    <div>
+                        <i>@comment.Comment1</i>
+                    </div>
+                </div>
+            }
+
+            <div class="box-comment panel separator-only-vertical">
+                <a name="new-comment"></a>
+                <h1 class="title-black">
+                    <span class="glyphicon glyphicon-send"></span>&nbsp; Por Zarquon, Deixe-nos um comentário?
+                </h1>
+                <hr />
+                <span>A improbabilidade gerada pelo seu comentário após o meu pedido fará bem à nave coração de ouro!</span>
+
+                <div class="row">
+                    <div class="col-md-8">
+                        <label>Nome:</label>
+                        <input type="text" class="form-control input-lg" />
+                    </div>
+                </div>    
+                <div class="row">
+                    <div class="col-md-8">
+                        <label>E-mail: (opcional)</label>
+                        <input type="text" class="form-control input-lg" />
+                    </div>
+                </div>    
+                <div class="row">
+                    <div class="col-md-12">
+                        <label>Comentário:</label>
+                        <textarea type="text" class="form-control input-lg no-resize"></textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 center">
+                        <button type="button" class="separator-only-vertical btn btn-primary btn-lg">Publicar comentário</button>
+                    </div>
+                </div>    
+
+            </div>
+        }
+        
     </div><!-- /.content -->
 </div><!-- /.jumbotron -->
